# brillibot-client

./: LICENSE  README.md  client.py  config.py  main.py  pyproject.toml
actions/: actions_flight.json  actions_lights.json
examples/: example_file.py  example_mic.py
src/brillibot_client/: brillibot_client.py  cli.py
src/client/: brillibot_client.py  cli.py  config.py
