[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brillibot_client"
version = "1.0.0"
authors = [
  { name="Blake Mallory", email="blakecmallory@gmail.com" },
]
description = "Client tool for Brillibot"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "speechrecognition",
    "pyaudio",
    "pydub",
    "requests",
    "pydantic",
    'importlib-metadata; python_version>"3.9"'
]

[project.scripts]
brillibot_client = "brillibot_client.cli:main"


